--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
